--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,47 @@
-# Compiled class file
-*.class
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# Log file
-*.log
+# compiled output
+/dist
+/artifacts
+/tmp
+/out-tsc
+/projects/performance-e2e/img
 
-# BlueJ files
-*.ctxt
+# dependencies
+/node_modules
+/src/lambda/node_modules
+/src/lambda/Archive.zip
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# profiling files
+chrome-profiler-events.json
+speed-measure-plugin.json
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+
+# System Files
+.DS_Store
+Thumbs.db
